joyd 0.0.5 2000-03-19
~~~~~~~~~~~~~~~~~~~~~
 - fixed a problem with joysticks that report buttons as axes with
   values of 1 and -1
 - added joyreadbutton and joyreadaxis to the joyd package
 - first two entries in the joystick configuration file (CONFIG)



joyd 0.0.4 2000-02-09
~~~~~~~~~~~~~~~~~~~~~
 - again some minor changes to the documentation, i.e. the default
   values are now listed in the joydrc(5) manpage



joyd 0.0.3 2000-01-17
~~~~~~~~~~~~~~~~~~~~~
 - calibration values are all wrong: the range is from -32768 to
   32767, not from -16384 to 16383
 - minor changes in documentation
 - added version information to the header files



joyd 0.0.2 2000-01-10
~~~~~~~~~~~~~~~~~~~~~
 - the global variable config was not declared correctly 
 - manual pages were added
 - "joyd -v" now prints the version number
 - config.c and config.o have been renamed to options.c and options.h
   because config.h files are generated by autoconfigure
 - the ActionLoop() function got split up into smaller parts



joyd 0.0.1 2000-01-09
~~~~~~~~~~~~~~~~~~~~~
first version
 - added signal handlers
 - added syslog routines
 - added background mode