@@ -14,21 +14,56 @@ added by Your Name <your@email>
 
 Action            | Event            | Values ([a]nalog / [d]igital)
 ------------------+------------------+---------------------------------------
-Left                Axis 1 low         [a] 0 to -32767
+Left              | Axis 1 low       | [a] 0 to -32767
 
 #
 #############################################################################
+#
+#
+#
 
 
   T A B L E   O F   C O N T E N T S
   =================================
 
 
-  As of joyd version 0.0.5 you will find info on these joysticks:
+  As of joyd version 0.0.6 you will find info on these joysticks:
 
+    - Gravis GamePad Pro (USB)
     - Microsoft Sidewinder Force Feedback Pro
-    - Super Nintento Joypad
+    - Super Nintendo Joypad
 
+
+#
+#
+#
+#############################################################################
+
+
+   Gravis GamePad Pro (USB)
+   ~~~~~~~~~~~~~~~~~~~~~~~~
+
+added by Stephane Louise <luigi@fleming.u-psud.fr>
+
+        Driver is UBS backport form 2.3.42 to 2.2.14
+        (shouldn't be different in 2.4 final)
+
+Action            | Event            | Values ([a]nalog / [d]igital)
+------------------+------------------+---------------------------------------
+Left              | Axis 1 low       | [d] -32767
+Right             | Axis 1 high      | [d]  32767
+Up                | Axis 2 low       | [d] -32767
+Down              | Axis 2 high      | [d]  32768
+Button "Red(Left)"| Button 1         |
+Button "Yellow(B)"| Button 2         |
+Button "Green(R)" | Button 3         |
+Button "Blue(Top)"| Button 4         |
+Button "L1"       | Button 5         |
+Button "R1"       | Button 6         |
+Button "L2"       | Button 7         |
+Button "R2"       | Button 8         |
+Button "Select"   | Button 9         |
+Button "Start"    | Butoon 10        |
 
 
 #############################################################################
@@ -55,18 +90,18 @@ added by Christian Garbs <mitch@uni.de>
 
 Action            | Event            | Values ([a]nalog / [d]igital)
 ------------------+------------------+----------------------------------------
-Left                Axis 1 low         [d] -32767
-Right               Axis 1 high        [d]  32767
-Up                  Axis 2 low         [d] -32767
-Down                Axis 2 high        [d]  32767
-Button "A"          Button 1
-Button "B"          Button 2
-Button "X"          Button 3
-Button "Y"          Button 4
-Button "L"          Button 5
-Button "R"          Button 6
-Button "Select"     Button 7
-Button "Start"      Button 8
+Left              | Axis 1 low       | [d] -32767
+Right             | Axis 1 high      | [d]  32767
+Up                | Axis 2 low       | [d] -32767
+Down              | Axis 2 high      | [d]  32767
+Button "A"        | Button 1         |
+Button "B"        | Button 2         |
+Button "X"        | Button 3         |
+Button "Y"        | Button 4         |
+Button "L"        | Button 5         |
+Button "R"        | Button 6         |
+Button "Select"   | Button 7         |
+Button "Start"    | Button 8         |
 
 
 #############################################################################
