@@ -14,7 +14,7 @@
 .TP 0.5i
 .B "\\$1 "
 ..
-.TH JOYD 1 "Mar 19 2000" "v0.0.5"
+.TH JOYD 1 "Apr 06 2000" "v0.0.6"
 .SH NAME
 .B joyd
 \- a joystick daemon
