@@ -1,7 +1,7 @@
 /* signal.h
  *
  * part of
- * joyd 0.0.5 2000-03-19
+ * joyd 0.0.6 2000-04-06
  *
  */
 
